[package]
name = "API-Call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91" 
reqwest = {version = "0.11.14", features = ["serde_json"]}
serde = { version = "1.0.152", features = ["derive"]}
tokio = {version = "1.23.0", features = ["full"]}
